--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/nextjs": "^6.35.4",
+    "@prisma/client": "^6.19.0",
+    "@supabase/supabase-js": "^2.84.0",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "resend": "^6.5.2"
+    "resend": "^6.5.2",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
